fixed demo_list > a z-index

--- a/css/index_main.css
+++ b/css/index_main.css
@@ -560,10 +560,13 @@ html {
 }
 
 .demo_list {
-  padding: 60px 20px;
   left: 10%;
   width: 80%;
   font-size: 15px;
+  z-index: 100;
+  word-break: normal;
+  word-wrap: break-word;
+  padding: 60px 20px;
   position: relative;
 }
 .demo_list a {
